--- a/user_guides/primitives_pipelines/primitives/TadGAN.html
+++ b/user_guides/primitives_pipelines/primitives/TadGAN.html
@@ -422,11 +422,11 @@
 <span class="gp">   ...: </span>
 
 <span class="gp">In [6]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">fit</span><span class="p">()</span>
-<span class="go">Epoch: 1/5, [Dx loss: [ 7.4012737  -0.12128352 -0.01035883  0.7532916 ]] [Dz loss: [ 0.7379353   0.24590623 -0.05702575  0.05490548]] [G loss: [ 1.0042341e+01 -2.0353838e-03  5.9899919e-02  9.9844772e-01]]</span>
-<span class="go">Epoch: 2/5, [Dx loss: [ 7.2324715e+00 -6.8116859e-02 -2.0130505e-03  7.3026013e-01]] [Dz loss: [-0.17377847 -0.70371246 -0.21680316  0.07467372]] [G loss: [ 9.5194817e+00 -2.1985956e-03 -5.2750567e-03  9.5269555e-01]]</span>
-<span class="go">Epoch: 3/5, [Dx loss: [ 6.9370756  -0.16152327  0.03098792  0.70676106]] [Dz loss: [ 0.5365452  -0.85731995  0.10852376  0.12853414]] [G loss: [ 9.448691   -0.01097982  0.20135875  0.9258312 ]]</span>
-<span class="go">Epoch: 4/5, [Dx loss: [ 5.9269271e+00 -8.1382537e-01  5.7596546e-03  6.7349929e-01]] [Dz loss: [-0.4732746  -1.075751   -0.4596362   0.10621126]] [G loss: [ 9.573753   -0.01948909  0.32790458  0.9265338 ]]</span>
-<span class="go">Epoch: 5/5, [Dx loss: [ 5.6495337  -0.6575293   0.02654564  0.62805176]] [Dz loss: [ 1.7269504  -0.07213718  0.7703556   0.10287319]] [G loss: [ 6.760141   -0.05282808 -0.75567263  0.7568642 ]]</span>
+<span class="go">Epoch: 1/5, [Dx loss: [ 7.4012737  -0.12128364 -0.01035884  0.7532916 ]] [Dz loss: [ 0.7379352   0.24590623 -0.05702575  0.05490547]] [G loss: [ 1.0042341e+01 -2.0353878e-03  5.9899919e-02  9.9844772e-01]]</span>
+<span class="go">Epoch: 2/5, [Dx loss: [ 7.2324719e+00 -6.8116866e-02 -2.0130491e-03  7.3026019e-01]] [Dz loss: [-0.17377841 -0.70371246 -0.21680316  0.07467373]] [G loss: [ 9.5194817e+00 -2.1985897e-03 -5.2750567e-03  9.5269555e-01]]</span>
+<span class="go">Epoch: 3/5, [Dx loss: [ 6.937075   -0.16152346  0.03098794  0.70676106]] [Dz loss: [ 0.53654534 -0.85731995  0.10852388  0.12853414]] [G loss: [ 9.44869    -0.01097982  0.20135847  0.9258312 ]]</span>
+<span class="go">Epoch: 4/5, [Dx loss: [ 5.9269276e+00 -8.1382531e-01  5.7596704e-03  6.7349929e-01]] [Dz loss: [-0.4732746  -1.075751   -0.45963618  0.10621125]] [G loss: [ 9.573753   -0.01948907  0.32790455  0.9265338 ]]</span>
+<span class="go">Epoch: 5/5, [Dx loss: [ 5.6495337  -0.657529    0.02654563  0.6280517 ]] [Dz loss: [ 1.7269502  -0.07213718  0.77035546  0.10287318]] [G loss: [ 6.7601414  -0.05282806 -0.75567245  0.7568642 ]]</span>
 
 <span class="gp">In [7]: </span><span class="n">y</span><span class="p">,</span> <span class="n">critic</span> <span class="o">=</span> <span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">X</span><span class="p">,</span> <span class="n">y</span><span class="o">=</span><span class="n">y</span><span class="p">)</span>
 
