--- a/user_guides/primitives_pipelines/primitives/TadGAN.html
+++ b/user_guides/primitives_pipelines/primitives/TadGAN.html
@@ -424,18 +424,18 @@
 <span class="gp">   ...: </span>
 
 <span class="gp">In [6]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">fit</span><span class="p">()</span>
-<span class="go">Epoch: 1/5, [Dx loss: [ 7.4012737  -0.12128352 -0.01035883  0.7532916 ]] [Dz loss: [ 0.7379353   0.24590623 -0.05702575  0.05490548]] [G loss: [ 1.0041376e+01 -3.2837754e-03  6.0182713e-02  9.9844772e-01]]</span>
-<span class="go">Epoch: 2/5, [Dx loss: [ 7.0998483e+00 -1.1833060e-01 -9.5822295e-04  7.2191370e-01]] [Dz loss: [-0.17346716 -0.7027973  -0.21712103  0.07464512]] [G loss: [ 9.5159445e+00 -4.4358047e-03 -5.0832806e-03  9.5254636e-01]]</span>
-<span class="go">Epoch: 3/5, [Dx loss: [ 6.7607965  -0.22142422  0.03590521  0.6946316 ]] [Dz loss: [ 0.52898973 -0.86023116  0.1072983   0.12819226]] [G loss: [ 9.443733   -0.0146815   0.20293453  0.925548  ]]</span>
-<span class="go">Epoch: 4/5, [Dx loss: [ 5.661477   -0.9195834   0.00861621  0.65724444]] [Dz loss: [-0.47485697 -1.0760599  -0.46054107  0.10617441]] [G loss: [ 9.570844  -0.0228109  0.3293935  0.9264261]]</span>
-<span class="go">Epoch: 5/5, [Dx loss: [ 5.364877   -0.7652635   0.03423721  0.60959035]] [Dz loss: [ 1.7246885  -0.07446363  0.7703665   0.10287856]] [G loss: [ 6.7423773  -0.06326884 -0.7542635   0.755991  ]]</span>
+<span class="go">Epoch: 1/5, [Dx loss: [ 7.4012737  -0.12128364 -0.01035884  0.7532916 ]] [Dz loss: [ 0.7379352   0.24590623 -0.05702575  0.05490547]] [G loss: [ 1.0042341e+01 -2.0353878e-03  5.9899919e-02  9.9844772e-01]]</span>
+<span class="go">Epoch: 2/5, [Dx loss: [ 7.2324719e+00 -6.8116866e-02 -2.0130491e-03  7.3026019e-01]] [Dz loss: [-0.17377841 -0.70371246 -0.21680316  0.07467373]] [G loss: [ 9.5194817e+00 -2.1985897e-03 -5.2750567e-03  9.5269555e-01]]</span>
+<span class="go">Epoch: 3/5, [Dx loss: [ 6.937075   -0.16152346  0.03098794  0.70676106]] [Dz loss: [ 0.53654534 -0.85731995  0.10852388  0.12853414]] [G loss: [ 9.44869    -0.01097982  0.20135847  0.9258312 ]]</span>
+<span class="go">Epoch: 4/5, [Dx loss: [ 5.9269276e+00 -8.1382531e-01  5.7596704e-03  6.7349929e-01]] [Dz loss: [-0.4732746  -1.075751   -0.45963618  0.10621125]] [G loss: [ 9.573753   -0.01948907  0.32790455  0.9265338 ]]</span>
+<span class="go">Epoch: 5/5, [Dx loss: [ 5.6495337  -0.657529    0.02654563  0.6280517 ]] [Dz loss: [ 1.7269502  -0.07213718  0.77035546  0.10287318]] [G loss: [ 6.7601414  -0.05282806 -0.75567245  0.7568642 ]]</span>
 
 <span class="gp">In [7]: </span><span class="n">y</span><span class="p">,</span> <span class="n">critic</span> <span class="o">=</span> <span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">X</span><span class="p">,</span> <span class="n">y</span><span class="o">=</span><span class="n">y</span><span class="p">)</span>
 
 <span class="gp">In [8]: </span><span class="nb">print</span><span class="p">(</span><span class="s2">&quot;average reconstructed value: </span><span class="si">{:.2f}</span><span class="s2">, critic score </span><span class="si">{:.2f}</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span>
 <span class="gp">   ...: </span>    <span class="n">y</span><span class="o">.</span><span class="n">mean</span><span class="p">(),</span> <span class="n">critic</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]))</span>
 <span class="gp">   ...: </span>
-<span class="go">average reconstructed value: 0.17, critic score 1.15</span>
+<span class="go">average reconstructed value: 0.17, critic score 1.01</span>
 </pre></div>
 </div>
 </div>
