--- a/user_guides/primitives_pipelines/primitives/TadGAN.html
+++ b/user_guides/primitives_pipelines/primitives/TadGAN.html
@@ -424,18 +424,18 @@
 <span class="gp">   ...: </span>
 
 <span class="gp">In [6]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">fit</span><span class="p">()</span>
-<span class="go">Epoch: 1/5, [Dx loss: [ 7.4012737  -0.12128364 -0.01035884  0.7532916 ]] [Dz loss: [ 0.7379352   0.24590623 -0.05702575  0.05490547]] [G loss: [ 1.0042341e+01 -2.0353878e-03  5.9899919e-02  9.9844772e-01]]</span>
-<span class="go">Epoch: 2/5, [Dx loss: [ 7.2324719e+00 -6.8116866e-02 -2.0130491e-03  7.3026019e-01]] [Dz loss: [-0.17377841 -0.70371246 -0.21680316  0.07467373]] [G loss: [ 9.5195723e+00 -2.1985897e-03 -5.1848125e-03  9.5269555e-01]]</span>
-<span class="go">Epoch: 3/5, [Dx loss: [ 6.937075   -0.16152346  0.03098794  0.70676106]] [Dz loss: [ 0.5355069  -0.85768116  0.1083837   0.12848043]] [G loss: [ 9.449036   -0.01097982  0.20167705  0.9258338 ]]</span>
-<span class="go">Epoch: 4/5, [Dx loss: [ 5.9269276e+00 -8.1382531e-01  5.7596788e-03  6.7349929e-01]] [Dz loss: [-0.47353375 -1.0759504  -0.4597436   0.10621603]] [G loss: [ 9.573968   -0.01948909  0.32810214  0.92653555]]</span>
-<span class="go">Epoch: 5/5, [Dx loss: [ 5.649534   -0.657529    0.02654562  0.62805176]] [Dz loss: [ 1.7270553  -0.07221779  0.7704664   0.10288066]] [G loss: [ 6.7605224  -0.05282817 -0.7556715   0.7569022 ]]</span>
+<span class="go">Epoch: 1/5, [Dx loss: [ 7.4012737  -0.12128352 -0.01035883  0.7532916 ]] [Dz loss: [ 0.7379353   0.24590623 -0.05702575  0.05490548]] [G loss: [ 1.0041093e+01 -3.2837754e-03  5.9899919e-02  9.9844772e-01]]</span>
+<span class="go">Epoch: 2/5, [Dx loss: [ 7.0998483e+00 -1.1833060e-01 -9.5822295e-04  7.2191370e-01]] [Dz loss: [-0.17377847 -0.70371246 -0.21680316  0.07467372]] [G loss: [ 9.5156698e+00 -4.4358047e-03 -5.2750567e-03  9.5253813e-01]]</span>
+<span class="go">Epoch: 3/5, [Dx loss: [ 6.7607965  -0.22142422  0.03590511  0.6946316 ]] [Dz loss: [ 0.5360619  -0.85731995  0.10804045  0.12853414]] [G loss: [ 9.442774   -0.01454955  0.20217541  0.9255148 ]]</span>
+<span class="go">Epoch: 4/5, [Dx loss: [ 5.674724   -0.91409284  0.00851952  0.65802974]] [Dz loss: [-0.4631201  -1.0757508  -0.46082118  0.10734519]] [G loss: [ 9.570922   -0.02265155  0.3292584   0.9264315 ]]</span>
+<span class="go">Epoch: 5/5, [Dx loss: [ 5.3809137  -0.7598363   0.03388343  0.61068666]] [Dz loss: [ 1.5064771  -0.07206666  0.52028877  0.10582549]] [G loss: [ 6.8215027  -0.0628064  -0.55811197  0.7442421 ]]</span>
 
 <span class="gp">In [7]: </span><span class="n">y</span><span class="p">,</span> <span class="n">critic</span> <span class="o">=</span> <span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">X</span><span class="p">,</span> <span class="n">y</span><span class="o">=</span><span class="n">y</span><span class="p">)</span>
 
 <span class="gp">In [8]: </span><span class="nb">print</span><span class="p">(</span><span class="s2">&quot;average reconstructed value: </span><span class="si">{:.2f}</span><span class="s2">, critic score </span><span class="si">{:.2f}</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span>
 <span class="gp">   ...: </span>    <span class="n">y</span><span class="o">.</span><span class="n">mean</span><span class="p">(),</span> <span class="n">critic</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]))</span>
 <span class="gp">   ...: </span>
-<span class="go">average reconstructed value: 0.17, critic score 1.01</span>
+<span class="go">average reconstructed value: 0.18, critic score 1.14</span>
 </pre></div>
 </div>
 </div>
