--- a/user_guides/primitives_pipelines/primitives/TadGAN.html
+++ b/user_guides/primitives_pipelines/primitives/TadGAN.html
@@ -426,16 +426,16 @@
 <span class="gp">In [6]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">fit</span><span class="p">()</span>
 <span class="go">Epoch: 1/5, [Dx loss: [ 7.4012737  -0.12128364 -0.01035884  0.7532916 ]] [Dz loss: [ 0.7379352   0.24590623 -0.05702575  0.05490547]] [G loss: [ 1.0042341e+01 -2.0353878e-03  5.9899919e-02  9.9844772e-01]]</span>
 <span class="go">Epoch: 2/5, [Dx loss: [ 7.2324719e+00 -6.8116866e-02 -2.0130491e-03  7.3026019e-01]] [Dz loss: [-0.17377841 -0.70371246 -0.21680316  0.07467373]] [G loss: [ 9.5194817e+00 -2.1985897e-03 -5.2750567e-03  9.5269555e-01]]</span>
-<span class="go">Epoch: 3/5, [Dx loss: [ 6.937075   -0.16152346  0.03098794  0.70676106]] [Dz loss: [ 0.53654534 -0.85731995  0.10852388  0.12853414]] [G loss: [ 9.448575   -0.01109589  0.20135847  0.9258312 ]]</span>
-<span class="go">Epoch: 4/5, [Dx loss: [ 5.9128127e+00 -8.1892633e-01  5.8383746e-03  6.7259008e-01]] [Dz loss: [-0.4732746  -1.075751   -0.45963618  0.10621125]] [G loss: [ 9.573582   -0.01967101  0.32790455  0.9265349 ]]</span>
-<span class="go">Epoch: 5/5, [Dx loss: [ 5.632253   -0.66390157  0.02693297  0.6269222 ]] [Dz loss: [ 1.7269508  -0.07213718  0.7703561   0.10287318]] [G loss: [ 6.7595096  -0.05336925 -0.755676    0.7568555 ]]</span>
+<span class="go">Epoch: 3/5, [Dx loss: [ 6.937075   -0.16152346  0.03098794  0.70676106]] [Dz loss: [ 0.53654534 -0.85731995  0.10852388  0.12853414]] [G loss: [ 9.44869    -0.01097982  0.20135847  0.9258312 ]]</span>
+<span class="go">Epoch: 4/5, [Dx loss: [ 5.9269276e+00 -8.1382531e-01  5.7596704e-03  6.7349929e-01]] [Dz loss: [-0.4732746  -1.075751   -0.45963618  0.10621125]] [G loss: [ 9.573753   -0.01948907  0.32790455  0.9265338 ]]</span>
+<span class="go">Epoch: 5/5, [Dx loss: [ 5.6495337  -0.657529    0.02654563  0.6280517 ]] [Dz loss: [ 1.7269502  -0.07213718  0.77035546  0.10287318]] [G loss: [ 6.7601414  -0.05282806 -0.75567245  0.7568642 ]]</span>
 
 <span class="gp">In [7]: </span><span class="n">y</span><span class="p">,</span> <span class="n">critic</span> <span class="o">=</span> <span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">X</span><span class="p">,</span> <span class="n">y</span><span class="o">=</span><span class="n">y</span><span class="p">)</span>
 
 <span class="gp">In [8]: </span><span class="nb">print</span><span class="p">(</span><span class="s2">&quot;average reconstructed value: </span><span class="si">{:.2f}</span><span class="s2">, critic score </span><span class="si">{:.2f}</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span>
 <span class="gp">   ...: </span>    <span class="n">y</span><span class="o">.</span><span class="n">mean</span><span class="p">(),</span> <span class="n">critic</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]))</span>
 <span class="gp">   ...: </span>
-<span class="go">average reconstructed value: 0.17, critic score 1.02</span>
+<span class="go">average reconstructed value: 0.17, critic score 1.01</span>
 </pre></div>
 </div>
 </div>
