deploy: 6f22205e2d5349681cadbc3ea130ab4d397f6f9a

--- a/_modules/orion/benchmark.html
+++ b/_modules/orion/benchmark.html
@@ -205,14 +205,18 @@
 <span class="n">PIPELINE_DIR</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">dirname</span><span class="p">(</span><span class="vm">__file__</span><span class="p">),</span> <span class="s1">&#39;pipelines&#39;</span><span class="p">,</span> <span class="s1">&#39;verified&#39;</span><span class="p">)</span>
 
 <span class="n">VERIFIED_PIPELINES</span> <span class="o">=</span> <span class="p">[</span>
-    <span class="s1">&#39;arima&#39;</span><span class="p">,</span> <span class="s1">&#39;lstm_dynamic_threshold&#39;</span><span class="p">,</span> <span class="s1">&#39;azure&#39;</span><span class="p">,</span> <span class="s1">&#39;tadgan&#39;</span>
+    <span class="s1">&#39;arima&#39;</span><span class="p">,</span> <span class="s1">&#39;lstm_dynamic_threshold&#39;</span><span class="p">,</span> <span class="s1">&#39;azure&#39;</span><span class="p">,</span> <span class="s1">&#39;tadgan&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;aer&#39;</span><span class="p">,</span> <span class="s1">&#39;lstm_autoencoder&#39;</span><span class="p">,</span> <span class="s1">&#39;dense_autoencoder&#39;</span>
 <span class="p">]</span>
 
 <span class="n">VERIFIED_PIPELINES_GPU</span> <span class="o">=</span> <span class="p">{</span>
     <span class="s1">&#39;arima&#39;</span><span class="p">:</span> <span class="s1">&#39;arima&#39;</span><span class="p">,</span>
     <span class="s1">&#39;lstm_dynamic_threshold&#39;</span><span class="p">:</span> <span class="s1">&#39;lstm_dynamic_threshold_gpu&#39;</span><span class="p">,</span>
     <span class="s1">&#39;azure&#39;</span><span class="p">:</span> <span class="s1">&#39;azure&#39;</span><span class="p">,</span>
-    <span class="s1">&#39;tadgan&#39;</span><span class="p">:</span> <span class="s1">&#39;tadgan_gpu&#39;</span>
+    <span class="s1">&#39;tadgan&#39;</span><span class="p">:</span> <span class="s1">&#39;tadgan_gpu&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;aer&#39;</span><span class="p">:</span> <span class="s1">&#39;aer&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;lstm_autoencoder&#39;</span><span class="p">:</span> <span class="s1">&#39;lstm_autoencoder_gpu&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;dense_autoencoder&#39;</span><span class="p">:</span> <span class="s1">&#39;dense_autoencoder&#39;</span>
 <span class="p">}</span>
 
 
