deploy: 7b3e66d91e415c8d8eb17af15e4541aad7c14a7a

--- a/user_guides/primitives_pipelines/primitives/TadGAN.html
+++ b/user_guides/primitives_pipelines/primitives/TadGAN.html
@@ -429,11 +429,11 @@
 <span class="gp">   ...: </span>
 
 <span class="gp">In [6]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">fit</span><span class="p">()</span>
-<span class="go">Epoch: 1/5, [Dx loss: [ 8.1564751e+00 -2.8269568e-02 -1.2753400e-03  8.1860197e-01]] [Dz loss: [ 1.5643368  -0.23620689  0.0099258   0.17906179]] [G loss: [1.0159907e+01 2.7486266e-04 9.8272383e-02 1.0061361e+00]]</span>
-<span class="go">Epoch: 2/5, [Dx loss: [ 8.1122799e+00  2.5430264e-02 -5.7639816e-04  8.0874264e-01]] [Dz loss: [ 1.6766577   0.5785153  -0.23322849  0.13313708]] [G loss: [1.00375595e+01 1.62660016e-03 6.98878914e-02 9.96604562e-01]]</span>
-<span class="go">Epoch: 3/5, [Dx loss: [ 7.8373466e+00 -1.0367728e-01  2.3249544e-03  7.9386985e-01]] [Dz loss: [ 2.9572906   1.3475574  -0.10729401  0.17170271]] [G loss: [ 9.8960352e+00 -3.9700684e-03  7.8415960e-02  9.8215896e-01]]</span>
-<span class="go">Epoch: 4/5, [Dx loss: [ 7.6840506  -0.12672277  0.00894971  0.78018236]] [Dz loss: [ 3.0699205  -0.06610915 -0.16403773  0.33000675]] [G loss: [ 9.234391   -0.01001632  0.15146834  0.90929395]]</span>
-<span class="go">Epoch: 5/5, [Dx loss: [ 7.4018717e+00 -2.4671654e-01  5.4216404e-03  7.6431668e-01]] [Dz loss: [ 3.259162    0.63275695 -0.16589671  0.27923018]] [G loss: [ 8.784417   -0.01990581 -0.03972258  0.88440454]]</span>
+<span class="go">Epoch: 1/5, [Dx loss: [ 8.1564751e+00 -2.8269621e-02 -1.2753382e-03  8.1860197e-01]] [Dz loss: [ 1.5643368  -0.23620689  0.0099258   0.17906179]] [G loss: [1.0159907e+01 2.7486385e-04 9.8272383e-02 1.0061361e+00]]</span>
+<span class="go">Epoch: 2/5, [Dx loss: [ 8.1122694e+00  2.5430258e-02 -5.7639868e-04  8.0874157e-01]] [Dz loss: [ 1.6766577   0.5785153  -0.23322849  0.13313708]] [G loss: [1.0037527e+01 1.6266999e-03 6.9854617e-02 9.9660456e-01]]</span>
+<span class="go">Epoch: 3/5, [Dx loss: [ 7.83745193e+00 -1.03674665e-01  2.32489407e-03  7.93880165e-01]] [Dz loss: [ 2.9578063   1.347339   -0.10729899  0.17177662]] [G loss: [ 9.8960953e+00 -3.9700372e-03  7.8474306e-02  9.8215914e-01]]</span>
+<span class="go">Epoch: 4/5, [Dx loss: [ 7.6841106  -0.12672198  0.00894938  0.7801883 ]] [Dz loss: [ 3.0699062  -0.06618145 -0.1640899   0.33001775]] [G loss: [ 9.234481   -0.01001599  0.15155353  0.90929437]]</span>
+<span class="go">Epoch: 5/5, [Dx loss: [ 7.4018579e+00 -2.4671012e-01  5.4213628e-03  7.6431465e-01]] [Dz loss: [ 3.260072    0.6328456  -0.16591442  0.2793141 ]] [G loss: [ 8.7845955  -0.01991289 -0.03955744  0.88440657]]</span>
 
 <span class="gp">In [7]: </span><span class="n">y</span><span class="p">,</span> <span class="n">critic</span> <span class="o">=</span> <span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">X</span><span class="p">,</span> <span class="n">y</span><span class="o">=</span><span class="n">y</span><span class="p">)</span>
 
