deploy: c4a9ca2af640d35eb783020eca88111845aec6b2

--- a/user_guides/primitives_pipelines/primitives/TadGAN.html
+++ b/user_guides/primitives_pipelines/primitives/TadGAN.html
@@ -301,9 +301,9 @@
 <span class="gp">In [6]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">fit</span><span class="p">()</span>
 <span class="go">Epoch: 1/5, [Dx loss: [ 8.0358353e+00 -2.8269568e-02 -1.2753400e-03  8.0653805e-01]] [Dz loss: [ 1.7794594  -0.23620689  0.0099258   0.20057404]] [G loss: [1.0159936e+01 3.9907859e-04 9.8176286e-02 1.0061361e+00]]</span>
 <span class="go">Epoch: 2/5, [Dx loss: [ 8.2266264e+00  4.8404098e-02 -7.2023121e-04  8.1789428e-01]] [Dz loss: [ 0.87125677  0.5813192  -0.23270808  0.05226457]] [G loss: [1.0042438e+01 2.5260679e-03 7.0382267e-02 9.9695295e-01]]</span>
-<span class="go">Epoch: 3/5, [Dx loss: [ 8.1662960e+00 -6.1216407e-02  1.3160987e-03  8.2261962e-01]] [Dz loss: [ 4.1097317   1.3434842  -0.07955223  0.28457996]] [G loss: [ 9.9032230e+00 -2.5147239e-03  1.1221541e-01  9.7935224e-01]]</span>
-<span class="go">Epoch: 4/5, [Dx loss: [ 7.8878088e+00 -5.0721206e-02  6.4715696e-03  7.9320586e-01]] [Dz loss: [ 3.6822317  -0.07633361 -0.06623632  0.38248017]] [G loss: [ 9.2148132e+00 -7.2055329e-03  2.0977184e-03  9.2199212e-01]]</span>
-<span class="go">Epoch: 5/5, [Dx loss: [ 7.7692108e+00 -1.4564918e-01  8.1760244e-04  7.9140425e-01]] [Dz loss: [ 7.296199    0.6305946  -0.11499892  0.67806035]] [G loss: [ 9.0651865  -0.01252586  0.11949535  0.8958217 ]]</span>
+<span class="go">Epoch: 3/5, [Dx loss: [ 8.1662960e+00 -6.1216407e-02  1.3160987e-03  8.2261962e-01]] [Dz loss: [ 4.1097317   1.3434842  -0.07955223  0.28457996]] [G loss: [ 9.9032545e+00 -2.4829621e-03  1.1221541e-01  9.7935224e-01]]</span>
+<span class="go">Epoch: 4/5, [Dx loss: [ 7.8943224e+00 -4.9819503e-02  6.4297211e-03  7.9377121e-01]] [Dz loss: [ 3.6822317  -0.07633361 -0.06623632  0.38248017]] [G loss: [ 9.2148657e+00 -7.1559101e-03  2.0977184e-03  9.2199242e-01]]</span>
+<span class="go">Epoch: 5/5, [Dx loss: [ 7.7716804e+00 -1.4448620e-01  8.0154615e-04  7.9153651e-01]] [Dz loss: [ 7.2961993   0.6305946  -0.11499884  0.67806035]] [G loss: [ 9.065273   -0.01242756  0.1194953   0.89582056]]</span>
 
 <span class="gp">In [7]: </span><span class="n">y</span><span class="p">,</span> <span class="n">critic</span> <span class="o">=</span> <span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">X</span><span class="p">,</span> <span class="n">y</span><span class="o">=</span><span class="n">y</span><span class="p">)</span>
 
