--- a/user_guides/primitives_pipelines/primitives/score_anomalies.html
+++ b/user_guides/primitives_pipelines/primitives/score_anomalies.html
@@ -41,7 +41,7 @@
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
     <link rel="next" title="reconstuction errors" href="reconstruction_errors.html" />
-    <link rel="prev" title="AER" href="AER.html" />
+    <link rel="prev" title="VAE" href="VAE.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="en" />
   </head>
@@ -313,7 +313,7 @@
               
               <div class='prev-next-bottom'>
                 
-    <a class='left-prev' id="prev-link" href="AER.html" title="previous page">AER</a>
+    <a class='left-prev' id="prev-link" href="VAE.html" title="previous page">VAE</a>
     <a class='right-next' id="next-link" href="reconstruction_errors.html" title="next page">reconstuction errors</a>
 
               </div>
