deploy: 6e4d601164753bd80e58732ab93ddb1d9fb19cf4

--- a/user_guides/benchmarking.html
+++ b/user_guides/benchmarking.html
@@ -231,21 +231,24 @@
 </thead>
 <tbody>
 <tr class="row-even"><td><p>AER</p></td>
-<td><p>11</p></td>
+<td><p>10</p></td>
 </tr>
 <tr class="row-odd"><td><p>TadGAN</p></td>
-<td><p>8</p></td>
+<td><p>7</p></td>
 </tr>
 <tr class="row-even"><td><p>LSTM Dynamic Thresholding</p></td>
-<td><p>7</p></td>
+<td><p>8</p></td>
 </tr>
 <tr class="row-odd"><td><p>LSTM Autoencoder</p></td>
-<td><p>7</p></td>
+<td><p>6</p></td>
 </tr>
 <tr class="row-even"><td><p>Dense Autoencoder</p></td>
 <td><p>6</p></td>
 </tr>
-<tr class="row-odd"><td><p>Azure</p></td>
+<tr class="row-odd"><td><p>VAE</p></td>
+<td><p>6</p></td>
+</tr>
+<tr class="row-even"><td><p>Azure</p></td>
 <td><p>0</p></td>
 </tr>
 </tbody>
